:bug: Fix z-index of closing button

--- a/frontend/scss/components/molecules/search-trigger.scss
+++ b/frontend/scss/components/molecules/search-trigger.scss
@@ -26,7 +26,7 @@
     position: absolute;
     right: 2rem;
     top: 10rem;
-    z-index: 1;
+    z-index: 3;
 
     @media (max-width: 1023px) {
       top: 7.5rem;
